// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PolicyAndNotes /> if \`props.cancellationPolicyText\` is passed should have the right structure 1`] = `
<PolicyAndNotes
  cancellationPolicyHeadingText="Cancellation Policy"
  cancellationPolicyRules={null}
  cancellationPolicyText="All paid prepayments are non-refundable."
  damageDepositHeadingText="Damage Deposit"
  damageDepositRules={null}
  extraNotesText={null}
  headingText="Policy and Notes"
  modalTriggerText="View more"
  notesHeadingText="Notes"
  notesText={null}
  paymentScheduleHeadingText="Payment Schedule"
  paymentScheduleRules={null}
>
  <Grid
    areColumnsCentered={false}
    stackable={true}
  >
    <Grid
      centered={false}
      stackable={true}
    >
      <div
        className="ui stackable grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Policy and Notes
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</PolicyAndNotes>
`;

exports[`<PolicyAndNotes /> if \`props.damageDepositText\` is passed should have the right structure 1`] = `
<PolicyAndNotes
  cancellationPolicyHeadingText="Cancellation Policy"
  cancellationPolicyRules={null}
  damageDepositHeadingText="Damage Deposit"
  damageDepositRules={null}
  damageDepositText="A refundable damage deposit of 200.00 € (EUR) is due."
  extraNotesText={null}
  headingText="Policy and Notes"
  modalTriggerText="View more"
  notesHeadingText="Notes"
  notesText={null}
  paymentScheduleHeadingText="Payment Schedule"
  paymentScheduleRules={null}
>
  <Grid
    areColumnsCentered={false}
    stackable={true}
  >
    <Grid
      centered={false}
      stackable={true}
    >
      <div
        className="ui stackable grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Policy and Notes
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</PolicyAndNotes>
`;

exports[`<PolicyAndNotes /> if \`props.extraNotesText\` is passed should have the right structure 1`] = `
<PolicyAndNotes
  cancellationPolicyHeadingText="Cancellation Policy"
  cancellationPolicyRules={null}
  damageDepositHeadingText="Damage Deposit"
  damageDepositRules={null}
  extraNotesText="
  Livingstone is a modern website template with clean and straight lines. Its special feature is a wide horizontal header photo slideshow in which logo and header navigation nicely blend in.

  Maecenas et efficitur diam. Etiam non ante urna. Donec imperdiet cursus lectus, luctus vestibulum urna aliquet vel. Donec non vehicula est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.

  Livingstone is a modern website template with clean and straight lines. Its special feature is a wide horizontal header photo slideshow in which logo and header navigation nicely blend in.

  Maecenas et efficitur diam. Etiam non ante urna. Donec imperdiet cursus lectus, luctus vestibulum urna aliquet vel. Donec non vehicula est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
"
  headingText="Policy and Notes"
  modalTriggerText="View more"
  notesHeadingText="Notes"
  notesText={null}
  paymentScheduleHeadingText="Payment Schedule"
  paymentScheduleRules={null}
>
  <Grid
    areColumnsCentered={false}
    stackable={true}
  >
    <Grid
      centered={false}
      stackable={true}
    >
      <div
        className="ui stackable grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Policy and Notes
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Modal
                      isFullscreen={false}
                      size="tiny"
                      trigger={
                        <Link
                          href={null}
                          isPositionedRight={false}
                          onClick={[Function]}
                          willOpenInNewTab={false}
                        >
                          View more
                        </Link>
                      }
                    >
                      <Modal
                        closeIcon={
                          <Icon
                            color={null}
                            hasBorder={false}
                            isButton={false}
                            isCircular={false}
                            isColorInverted={false}
                            isDisabled={false}
                            isLabelLeft={false}
                            labelText={null}
                            labelWeight={null}
                            name="close"
                            path={null}
                            size={null}
                          />
                        }
                        closeOnDimmerClick={true}
                        closeOnDocumentClick={false}
                        content={
                          Array [
                            <Paragraph
                              size="medium"
                              weight={null}
                            >
                              Livingstone is a modern website template with clean and straight lines. Its special feature is a wide horizontal header photo slideshow in which logo and header navigation nicely blend in.
                            </Paragraph>,
                            <Paragraph
                              size="medium"
                              weight={null}
                            >
                              Maecenas et efficitur diam. Etiam non ante urna. Donec imperdiet cursus lectus, luctus vestibulum urna aliquet vel. Donec non vehicula est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
                            </Paragraph>,
                            <Paragraph
                              size="medium"
                              weight={null}
                            >
                              Livingstone is a modern website template with clean and straight lines. Its special feature is a wide horizontal header photo slideshow in which logo and header navigation nicely blend in.
                            </Paragraph>,
                            <Paragraph
                              size="medium"
                              weight={null}
                            >
                              Maecenas et efficitur diam. Etiam non ante urna. Donec imperdiet cursus lectus, luctus vestibulum urna aliquet vel. Donec non vehicula est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
                            </Paragraph>,
                          ]
                        }
                        dimmer="inverted"
                        eventPool="Modal"
                        size="tiny"
                        trigger={
                          <Link
                            href={null}
                            isPositionedRight={false}
                            onClick={[Function]}
                            willOpenInNewTab={false}
                          >
                            View more
                          </Link>
                        }
                      >
                        <Portal
                          className="ui inverted page modals dimmer transition visible active"
                          closeOnDocumentClick={false}
                          closeOnEscape={true}
                          closeOnRootNodeClick={true}
                          eventPool="Modal"
                          mountNode={<body />}
                          onClose={[Function]}
                          onMount={[Function]}
                          onOpen={[Function]}
                          onUnmount={[Function]}
                          openOnTriggerClick={true}
                          trigger={
                            <Link
                              href={null}
                              isPositionedRight={false}
                              onClick={[Function]}
                              willOpenInNewTab={false}
                            >
                              View more
                            </Link>
                          }
                        >
                          <Ref
                            innerRef={[Function]}
                          >
                            <Link
                              href={null}
                              isPositionedRight={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              willOpenInNewTab={false}
                            >
                              <Button
                                as={null}
                                basic={true}
                                floated="left"
                                href={null}
                                onClick={[Function]}
                                target="_self"
                              >
                                <button
                                  className="ui basic left floated button"
                                  href={null}
                                  onClick={[Function]}
                                  role="button"
                                  target="_self"
                                >
                                  View more
                                </button>
                              </Button>
                            </Link>
                          </Ref>
                        </Portal>
                      </Modal>
                    </Modal>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</PolicyAndNotes>
`;

exports[`<PolicyAndNotes /> if \`props.notesText\` is passed should have the right structure 1`] = `
<PolicyAndNotes
  cancellationPolicyHeadingText="Cancellation Policy"
  cancellationPolicyRules={null}
  damageDepositHeadingText="Damage Deposit"
  damageDepositRules={null}
  extraNotesText={null}
  headingText="Policy and Notes"
  modalTriggerText="View more"
  notesHeadingText="Notes"
  notesText="
  Livingstone is a modern website template with clean and straight lines. Its special feature is a wide horizontal header photo slideshow in which logo and header navigation nicely blend in.

  Maecenas et efficitur diam. Etiam non ante urna. Donec imperdiet cursus lectus, luctus vestibulum urna aliquet vel. Donec non vehicula est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
"
  paymentScheduleHeadingText="Payment Schedule"
  paymentScheduleRules={null}
>
  <Grid
    areColumnsCentered={false}
    stackable={true}
  >
    <Grid
      centered={false}
      stackable={true}
    >
      <div
        className="ui stackable grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Policy and Notes
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      isColorInverted={false}
                      size="small"
                      textAlign={null}
                    >
                      <Header
                        as="h4"
                        inverted={false}
                        textAlign={null}
                      >
                        <h4
                          className="ui header"
                        >
                          Notes
                        </h4>
                      </Header>
                    </Heading>
                    <Paragraph
                      size="medium"
                      weight={null}
                    >
                      <p
                        className=""
                      >
                        
  Livingstone is a modern website template with clean and straight lines. Its special feature is a wide horizontal header photo slideshow in which logo and header navigation nicely blend in.

  Maecenas et efficitur diam. Etiam non ante urna. Donec imperdiet cursus lectus, luctus vestibulum urna aliquet vel. Donec non vehicula est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.

                      </p>
                    </Paragraph>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</PolicyAndNotes>
`;

exports[`<PolicyAndNotes /> if \`props.paymentScheduleText\` is passed should have the right structure 1`] = `
<PolicyAndNotes
  cancellationPolicyHeadingText="Cancellation Policy"
  cancellationPolicyRules={null}
  damageDepositHeadingText="Damage Deposit"
  damageDepositRules={null}
  extraNotesText={null}
  headingText="Policy and Notes"
  modalTriggerText="View more"
  notesHeadingText="Notes"
  notesText={null}
  paymentScheduleHeadingText="Payment Schedule"
  paymentScheduleRules={null}
  paymentScheduleText="50% due at time of booking. Remaining balance: Due later."
>
  <Grid
    areColumnsCentered={false}
    stackable={true}
  >
    <Grid
      centered={false}
      stackable={true}
    >
      <div
        className="ui stackable grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Policy and Notes
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</PolicyAndNotes>
`;

exports[`<PolicyAndNotes /> should have the right structure 1`] = `
<PolicyAndNotes
  cancellationPolicyHeadingText="Cancellation Policy"
  cancellationPolicyRules={null}
  damageDepositHeadingText="Damage Deposit"
  damageDepositRules={null}
  extraNotesText={null}
  headingText="Policy and Notes"
  modalTriggerText="View more"
  notesHeadingText="Notes"
  notesText={null}
  paymentScheduleHeadingText="Payment Schedule"
  paymentScheduleRules={null}
>
  <Grid
    areColumnsCentered={false}
    stackable={true}
  >
    <Grid
      centered={false}
      stackable={true}
    >
      <div
        className="ui stackable grid"
      >
        <GridRow
          horizontalAlignContent="left"
        >
          <GridRow
            textAlign="left"
          >
            <div
              className="left aligned row"
            >
              <GridColumn
                verticalAlignContent="top"
                width={12}
              >
                <GridColumn
                  verticalAlign="top"
                  width={12}
                >
                  <div
                    className="top aligned twelve wide column"
                  >
                    <Heading
                      isColorInverted={false}
                      size="medium"
                      textAlign={null}
                    >
                      <Header
                        as="h3"
                        inverted={false}
                        textAlign={null}
                      >
                        <h3
                          className="ui header"
                        >
                          Policy and Notes
                        </h3>
                      </Header>
                    </Heading>
                  </div>
                </GridColumn>
              </GridColumn>
            </div>
          </GridRow>
        </GridRow>
      </div>
    </Grid>
  </Grid>
</PolicyAndNotes>
`;
